Design for Main screen *RecyclerView - For notes listing on main screen *Center Title Toolbar *A FloatingActionButton for add notes action.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TakeMyNotes</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="take_my_notes_title">Take My Notes</string>
 </resources>
